codex-rs/tui_app_server/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_collapse_queue_message_without_context.snap
---
source: tui_app_server/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
"› Test                                  "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"  tab 将消息加入队列    剩余上下文 98%  " Hidden by multi-width symbols: [(7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (25, " "), (27, " "), (29, " "), (31, " "), (33, " ")]
